--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -20,3 +20,12 @@ select:focus {
 select:focus{
     border-color: #e4023b !important;
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance: textfield;
+}
